--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@ body::-webkit-scrollbar {
   display: inline-block;
   color: #2F2F2F;
   transition: color 0.2s ease;
+  cursor: pointer;
 }
 
 .underline-word.pink {
@@ -139,7 +140,7 @@ body::-webkit-scrollbar {
   bottom: -10px;
   width: 100%;
   height: 100%;
-  background-image: url('./underline-graphic.png');
+  background-image: url('./assets/underline-graphic.png');
   background-size: 200px 50px;
   background-repeat: no-repeat;
   transform: scaleX(0);
@@ -160,6 +161,7 @@ body::-webkit-scrollbar {
   display: inline-block;
   color: #2F2F2F;
   transition: color 0.2s ease;
+  cursor: pointer;
 }
 
 .circle-word.pink {
@@ -173,7 +175,7 @@ body::-webkit-scrollbar {
   top: 50%;
   width: 0;
   height: 0;
-  background-image: url('./circle-graphic.png');
+  background-image: url('./assets/circle-graphic.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
